# Parser

./: Cargo.toml
.github/workflows/: ci.yaml
ast/: Cargo.toml  asdl_rs.py
ast-pyo3/: Cargo.toml
ast-pyo3/src/: py_ast.rs  wrapper.rs
ast/src/: ast_gen.rs  builtin.rs  constant.rs  fold_helpers.rs  generic.rs  impls.rs  lib.rs  located.rs  optimizer.rs  pyo3.rs  pyo3_wrapper.rs  ranged.rs  replace.rs  source_locator.rs  unparse.rs
core/: Cargo.toml
core/src/: format.rs  lib.rs  source_code.rs
format/: Cargo.toml
format/src/: bigint.rs  cformat.rs  format.rs  lib.rs
literal/: Cargo.toml
literal/src/: cformat.rs  escape.rs  float.rs  format.rs  lib.rs
parser/: Cargo.toml
parser-pyo3/: Cargo.toml  baembal.py  bench1.py  bench2.py  pyproject.toml  test_ast.py
parser-pyo3/src/: lib.rs
parser/src/: context.rs  function.rs  lexer.rs  parser.rs  python.lalrpop  python.rs  soft_keywords.rs  string.rs  token.rs
parser/src/snapshots/: rustpython_parser__context__tests__ann_assign_name.snap  rustpython_parser__context__tests__assign_attribute.snap  rustpython_parser__context__tests__assign_for.snap  rustpython_parser__context__tests__assign_list.snap  rustpython_parser__context__tests__assign_list_comp.snap  rustpython_parser__context__tests__assign_name.snap  rustpython_parser__context__tests__assign_named_expr.snap  rustpython_parser__context__tests__assign_set_comp.snap  rustpython_parser__context__tests__assign_starred.snap  rustpython_parser__context__tests__assign_subscript.snap  rustpython_parser__context__tests__assign_tuple.snap  rustpython_parser__context__tests__assign_with.snap  rustpython_parser__context__tests__aug_assign_attribute.snap  rustpython_parser__context__tests__aug_assign_name.snap  rustpython_parser__context__tests__aug_assign_subscript.snap  rustpython_parser__context__tests__del_attribute.snap  rustpython_parser__context__tests__del_name.snap  rustpython_parser__context__tests__del_subscript.snap  rustpython_parser__function__tests__function_kw_only_args.snap  rustpython_parser__function__tests__function_kw_only_args_with_defaults.snap  rustpython_parser__function__tests__function_no_args.snap  rustpython_parser__function__tests__function_pos_and_kw_only_args.snap  rustpython_parser__function__tests__function_pos_and_kw_only_args_with_defaults.snap  rustpython_parser__function__tests__function_pos_and_kw_only_args_with_defaults_and_varargs.snap  rustpython_parser__function__tests__function_pos_and_kw_only_args_with_defaults_and_varargs_and_kwargs.snap  rustpython_parser__function__tests__function_pos_args.snap  rustpython_parser__function__tests__function_pos_args_with_defaults.snap  rustpython_parser__function__tests__lambda_kw_only_args.snap  rustpython_parser__function__tests__lambda_kw_only_args_with_defaults.snap  rustpython_parser__function__tests__lambda_no_args.snap  rustpython_parser__function__tests__lambda_pos_and_kw_only_args.snap  rustpython_parser__function__tests__lambda_pos_args.snap  rustpython_parser__function__tests__lambda_pos_args_with_defaults.snap  rustpython_parser__parser__tests__dict_unpacking.snap  rustpython_parser__parser__tests__generator_expression_argument.snap  rustpython_parser__parser__tests__match.snap  rustpython_parser__parser__tests__match_as_identifier.snap  rustpython_parser__parser__tests__parse_bool_op_and.snap  rustpython_parser__parser__tests__parse_bool_op_or.snap  rustpython_parser__parser__tests__parse_class.snap  (+62 more)
scripts/: update_asdl.sh
