[workspace.package]
version = "0.4.0"
authors = ["RustPython Team"]
edition = "2021"
rust-version = "1.72.1"
description = "Python parser and its dependencies."
repository = "https://github.com/RustPython/Parser"
license = "MIT"
include = ["LICENSE", "Cargo.toml", "src/**/*.rs"]

[workspace]
resolver = "2"
members = [
    "ast", "core", "format", "literal", "parser", "vendored",
]

[workspace.dependencies]
rustpython-parser-vendored = { path = "vendored", version = "0.4.0" }
rustpython-ast = { path = "ast", default-features = false, version = "0.4.0" }
rustpython-parser-core = { path = "core", features = [], version = "0.4.0" }
rustpython-literal = { path = "literal", version = "0.4.0" }
rustpython-format = { path = "format", default-features = false, version = "0.4.0" }
rustpython-parser = { path = "parser", default-features = false, version = "0.4.0" }

anyhow = "1.0.45"
bitflags = "2.4.0"
cfg-if = "1.0"
insta = "1.14.0"
itertools = "0.11.0"
is-macro = "0.3.0"
log = "0.4.16"
num-complex = "0.4.0"
num-bigint = "0.4.3"
num-traits = "0.2"
malachite-bigint = "0.2.3"
memchr = "2.5.0"
rand = "0.8.5"
serde = { version = "1.0.133", default-features = false }
static_assertions = "1.1"
once_cell = "1.18.0"
unicode_names2 = "1.1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.release]
lto = "thin"
