[package]
name = "rustpython-parser-core"
description = "RustPython parser data types."
version = "0.3.0"
authors = ["RustPython Team"]
edition = "2021"
repository = "https://github.com/RustPython/Parser/"
license = "MIT"

[dependencies]
# vendored dependency shouldn't be placed out of this crate
rustpython-parser-vendored.workspace = true
serde = { version = "1.0.133", optional = true, default-features = false, features = ["derive"] }
is-macro.workspace = true
memchr.workspace = true

[features]
default = []
location = []
