[package]
name = "rustpython-format"
description = "Format helpers for RustPython"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
rustpython-literal = { workspace = true }

bitflags = { workspace = true }
itertools = { workspace = true }
malachite-bigint = { workspace = true }
num-traits = { workspace = true }
